<resources>
    <string name="app_name">NewsMVP</string>
    <string name="error_message">Loading news was unsuccessful</string>
    <string name="action_retry">Retry</string>
    <string name="cont_descr_decoration" translatable="false">Decoration</string>
    <string name="title">title</string>
    <string name="preview">preview</string>
    <string name="date">date</string>
    <string name="sign_up">Sign Up</string>
    <string name="tap_to_log_in">Tap To Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
</resources>
