<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_small"
    tools:context=".DetailActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="visible"
            android:layout_marginTop="75dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/dark_gray"
            />

        <ImageView
            android:id="@+id/detailImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerInside"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/detailDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/date"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.Date" />

    <TextView
        android:id="@+id/detailTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.Title" />

    <TextView
        android:id="@+id/detailPreviewTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/preview"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.Preview" />

    <Button
        android:id="@+id/buttonGoWebsite"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="read news"
        android:onClick="goWebsite"/>

</LinearLayout>