<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    android:layout_marginBottom="@dimen/spacing_small"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        >

        <TextView
            android:id="@+id/item_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Category"
            app:layout_constraintBottom_toTopOf="@+id/item_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="@dimen/item_image_size"
            android:layout_height="@dimen/item_image_size"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_title"
            app:layout_constraintTop_toTopOf="@id/item_title"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.Title"
            app:layout_constraintBottom_toTopOf="@+id/item_preview"
            app:layout_constraintEnd_toStartOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_category" />

        <TextView
            android:id="@+id/item_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="3"
            android:ellipsize="end"
            android:textAppearance="@style/TextAppearance.Preview"
            app:layout_constraintBottom_toTopOf="@id/item_date"
            app:layout_constraintEnd_toStartOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_title"
            android:text="@string/preview"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="4dp"
            android:maxLines="1"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.Date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_preview" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
